# perth-transport-map

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  application.yaml  docker-compose.local.yaml  docker-compose.yaml  fly.api.toml  fly.worker.toml  renovate.json
.github/workflows/: build-and-push-image.yaml  build-deploy.yml  cleanup-old-images.yml  clear-cache.yml  deploy.yaml  pr-build.yaml
kubernetes/: api.deployment.yaml  api.service.yaml  client.policy.yaml  deployment.yaml  gateway.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  securitypolicy.yaml  service.yaml  web.deployment.yaml  web.service.yaml  worker.deployment.yaml  worker.service.yaml
perthtransport-api/: Cargo.toml  Dockerfile  Dockerfile.amd64
perthtransport-api/src/: main.rs  types.rs
perthtransport-api/src/graphql/: query.rs
perthtransport-api/src/routes/: graphql.rs  health.rs  websocket.rs
perthtransport-lib/: Cargo.toml
perthtransport-lib/src/: constants.rs  lib.rs  log.rs  query.rs  queue.rs
perthtransport-lib/src/types/: config.rs  converters.rs  health.rs  message.rs  mod.rs
perthtransport-lib/src/types/response/: mod.rs  realtime.rs  route.rs  trip.rs
perthtransport-lib/src/types/transperth/: mod.rs  realtime.rs  route.rs  timetable.rs  trip.rs
perthtransport-web/: .env.development  .env.production  Dockerfile  apollo-client.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
perthtransport-web/app/: globals.css  layout.tsx  not-found.tsx
perthtransport-web/app/map/: page.tsx
perthtransport-web/components/: SearchBox.tsx
perthtransport-web/components/Map/: index.tsx  styles.json
perthtransport-web/lib/: apollo-client.ts  useWebSocket.ts
perthtransport-web/queries/: useRouteQuery.ts
perthtransport-web/src/: App.tsx  index.css  main.tsx
perthtransport-web/src/components/: AnimatedMarker.tsx  DarkModeToggle.tsx  GithubLink.tsx  HealthStatus.tsx  SelectionInput.tsx
perthtransport-web/src/components/Map/: index.tsx  styles.json
perthtransport-web/src/hooks/: useApolloClient.ts  useDarkMode.ts  useGetMarkerIcon.ts  useGetRouteColour.ts  useHealthCheck.ts  useWebSocket.ts
perthtransport-web/src/routes/Map/: index.tsx  styles.dark.json  styles.json  styles.light.json
perthtransport-web/src/types/: index.ts
perthtransport-web/src/utils/: getRouteColour.ts
perthtransport-worker/: Cargo.toml  Dockerfile  Dockerfile.amd64
perthtransport-worker/src/: auth.rs  constants.rs  main.rs  task_manager.rs  types.rs
perthtransport-worker/src/routes/: health.rs
perthtransport-worker/src/tasks/: handle_active_trains.rs  handle_healthcheck.rs  handle_message.rs  handle_task_manager.rs  handle_trip.rs  handle_worker_out.rs  mod.rs
pta-api/: Cargo.toml  Dockerfile
pta-api/src/graphql/: query.rs
pta-api/src/routes/: health.rs  mod.rs  websocket.rs
pta-lib/: Cargo.toml
pta-lib/src/: config.rs  lib.rs  log.rs
pta-lib/src/types/: health.rs
pta-lib/src/types/response/: realtime.rs
pta-lib/src/types/transperth/: realtime.rs
pta-worker/: Cargo.toml
pta-worker/src/: auth.rs  main.rs  task_manager.rs
pta-worker/src/tasks/: handle_healthcheck.rs  mod.rs
