[package]
name = "perthtransport-api"
version = "0.1.0"
edition = "2021"

[dependencies]
perthtransport = { path = "../perthtransport-lib" }

config = "0.15.0"
redis = { version = "0.32.0", features = ["tokio-comp", "aio"] }
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = "1.0.94"
serde = "1.0.215"
futures-util = "0.3.31"
axum = { version = "0.8.0", features = ["ws", "tracing", "tokio"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tower = { version = "0.5.1", features = ["limit"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }
async-graphql = { version = "7.0.11", features = ["tracing"] }
async-graphql-axum = "7.0.11"
reqwest-tracing = "0.5.4"
reqwest-middleware = "0.4.0"
reqwest = { version = "0.12.9", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
chrono = "0.4.38"
chrono-tz = "0.10.0"
http = "1.2.0"
