[package]
name = "perthtransport-api"
version = "0.1.0"
edition = "2024"

[dependencies]
perthtransport = { path = "../perthtransport-lib" }

config = "0.15.11"
redis = { version = "1.0.0", features = ["tokio-comp", "aio"] }
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = "1.0.98"
serde = "1.0.219"
futures-util = "0.3.31"
axum = { version = "0.8.4", features = ["ws", "tracing", "tokio"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tower = { version = "0.5.2", features = ["limit"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
async-graphql = { version = "7.0.17", features = ["tracing"] }
async-graphql-axum = "7.0.17"
reqwest-tracing = "0.7.0"
reqwest-middleware = "0.5.0"
reqwest = { version = "0.13.0", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
chrono = "0.4.41"
chrono-tz = "0.10.3"
http = "1.3.1"
