[package]
name = "perthtransport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.38"
config = "0.15.0"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.42.0"
tracing = "0.1.41"
async-graphql = { version = "7.0.11", features = ["tracing"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
reqwest = { version = "0.12.9", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
reqwest-middleware = "0.4.0"
chrono-tz = "0.10.0"
http = "1.2.0"
redis = { version = "0.28.0", features = ["aio", "connection-manager"] }
reqwest-tracing = "0.5.4"
task-local-extensions = "0.1.4"
tracing-opentelemetry = "0.28.0"
opentelemetry = "0.27.1"
axum = { version = "0.8.0", features = ["tracing", "tokio"] }
