[package]
name = "perthtransport"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
config = "0.15.11"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
tracing = "0.1.41"
async-graphql = { version = "7.0.17", features = ["tracing"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
reqwest = { version = "0.13.0", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
reqwest-middleware = "0.5.0"
chrono-tz = "0.10.3"
http = "1.3.1"
redis = { version = "1.0.0", features = ["aio", "connection-manager"] }
reqwest-tracing = "0.7.0"
task-local-extensions = "0.1.4"
tracing-opentelemetry = "0.32.0"
axum = { version = "0.8.4", features = ["tracing", "tokio"] }

opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "http-proto",
    "reqwest-client",
    "logs",
    "reqwest-rustls",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = { version = "0.31.0" }
