[package]
name = "perthtransport-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
perthtransport = { path = "../perthtransport-lib" }

config = "0.15.0"
redis = { version = "0.32.0", features = ["tokio-comp", "aio"] }
tokio = { version = "1.42.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
anyhow = "1.0.94"
serde = "1.0.215"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
http = "1.2.0"
chrono = "0.4.38"
base64 = "0.22.1"
rand = { version = "0.9.0", features = ["small_rng"] }
lazy_static = "1.5.0"
rust-crypto = "0.2.36"
serde_json = "1.0.133"
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-tracing = "0.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono-tz = "0.10.0"
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
axum = { version = "0.8.0", features = [
    "tracing",
    "tokio",
    "json",
] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tower = { version = "0.5.1", features = ["limit"] }
