[package]
name = "perthtransport-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
perthtransport = { path = "../perthtransport-lib" }

config = "0.15.11"
redis = { version = "0.32.2", features = ["tokio-comp", "aio"] }
tokio = { version = "1.45.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
anyhow = "1.0.98"
serde = "1.0.219"
futures-util = "0.3.31"
reqwest = { version = "0.12.20", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
http = "1.3.1"
chrono = "0.4.41"
base64 = "0.22.1"
rand = { version = "0.9.1", features = ["small_rng"] }
lazy_static = "1.5.0"
rust-crypto = "0.2.36"
serde_json = "1.0.140"
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-tracing = "0.5.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono-tz = "0.10.3"
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
axum = { version = "0.8.4", features = [
    "tracing",
    "tokio",
    "json",
] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tower = { version = "0.5.2", features = ["limit"] }
