[package]
name = "pta-api"
version = "0.1.0"
edition = "2021"

[dependencies]
pta = { path = "../pta-lib" }

config = "0.13.3"
redis = { version = "0.23.0", features = ["tokio-comp", "aio"] }
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = "1.0.71"
serde = "1.0.164"
futures-util = "0.3.28"
axum = { version = "0.6.18", features = ["ws", "headers", "tracing", "tokio"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tower = { version = "0.4.13", features = ["limit"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.3", features = ["v4"] }
async-graphql = { version = "5.0.10", features = ["tracing"] }
async-graphql-axum = "5.0.10"
reqwest-tracing = "0.4.4"
reqwest-middleware = "0.2.2"
reqwest = { version = "0.11.18", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
chrono = "0.4.26"
chrono-tz = "0.8.2"
http = "0.2.9"
