[package]
name = "pta-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
pta = { path = "../pta-lib" }

config = "0.13.3"
redis = { version = "0.23.0", features = ["tokio-comp", "aio"] }
tokio = { version = "1.28.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
anyhow = "1.0.71"
serde = "1.0.164"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = [
    "rustls-tls",
    "json",
    "gzip",
], default-features = false }
http = "0.2.9"
chrono = "0.4.26"
base64 = "0.21.2"
rand = { version = "0.8.5", features = ["small_rng"] }
lazy_static = "1.4.0"
rust-crypto = "0.2.36"
serde_json = "1.0.96"
reqwest-middleware = "0.2.2"
reqwest-tracing = "0.4.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono-tz = "0.8.2"
